# splicing

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  entrypoint.sh  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: backend_test.yml
about/: index.html
architecture/: index.html
docs/: about.md  architecture.md  get-started.md  index.md
docs/how-tos/: copilot.md  create-project.md  integration-llm.md  notebook.md  orchestration.md  sections.md
get-started/: index.html
how-tos/copilot/: index.html
how-tos/create-project/: index.html
how-tos/integration-llm/: index.html
how-tos/notebook/: index.html
how-tos/orchestration/: index.html
how-tos/sections/: index.html
search/: search_index.json
splicing/backend/: generate_schema.py
splicing/backend/app/: main.py  schema.py
splicing/backend/app/api/: api.py  dependencies.py
splicing/backend/app/core/: config.py
splicing/backend/app/utils/: converse.py  execute.py  generate.py  helper.py  project_helper.py  prompt_manager.py  prompts.yaml  read_data.py  recommend.py  redis_client.py  types.py
splicing/backend/tests/unit/: test_helper.py  (+1 more)
splicing/frontend/: .env  .eslintrc.json  package-lock.json  package.json  tailwind.config.ts
splicing/frontend/app/: globals.css  layout.tsx  page.tsx
splicing/frontend/data/: section.tsx  settings.tsx
splicing/frontend/lib/: backend.ts  utils.ts
splicing/frontend/store/: home.ts  project.ts  settings.ts
splicing/schemas/: schema.yaml  setup.yaml  type.yaml
(+39 files in other folders)
